Simplify whitespace , fix @ signs

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -6,3 +6,11 @@
   src: url('../../node_modules/@fontsource-variable/lora/files/lora-latin-wght-italic.woff2') format('woff2');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
+
+@font-face {
+  font-family: 'Sometype Mono';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/vue-snapshot-serializer/sometype-mono-at.woff2') format('woff2');
+}
